# fastapi-project

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 00da822ebe17_initial_migration.py  1c3a5e22a26d_upgrade_user_model_for_authx_rbac.py  f3e0f129db5e_initial_migration.py
models/: __init__.py  order.py  order_item.py  product.py  user.py
routers/: auth.py  files.py  products.py
schemas/: product.py  user.py
services/: pdf_generator.py  products.py  users.py
settings/: db.py
settings/configs/: app.py
utils/: security.py
